--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -3,8 +3,8 @@
     "language": "العربية",
     "english": "الإنجليزية",
     "arabic": "العربية",
-    "callUs": "اتصل بنا: +00 123 456 789",
-    "newsletter": "اشترِ بأكثر من 15 دينار واحصل على توصيل مجاني حتى باب بيتك!",
+"callUs": "اتصل بنا: 0793053337 - 0793053338",
+    "newsletter": "اشترِ بأكثر من 20 دينار واحصل على توصيل مجاني حتى باب بيتك!",
     "home": "الصفحة الرئيسية",
     "loadingCategories": "جاري تحميل الفئات...",
     "errorLoadingCategories": "حدث خطأ أثناء تحميل الفئات.",
@@ -16,20 +16,20 @@
     "slides": [
       {
         "offer": "الافتتاح الكبير",
-        "title": "توصيل مجاني على الطلبات فوق 15 دينار!",
-        "description": "استمتع بتجربة تسوق فريدة مع منتجاتنا الجديدة وتوصيل مجاني للطلبات فوق 15 دينار أردني.",
+        "title": "توصيل مجاني على الطلبات فوق 20 دينار!",
+        "description": "استمتع بتجربة تسوق فريدة مع منتجاتنا الجديدة وتوصيل مجاني للطلبات فوق 20 دينار أردني.",
         "buttonText": "تسوق الآن"
       },
       {
         "offer": "عرض خاص",
-        "title": "توصيل مجاني على كل طلب يزيد عن 15 دينار",
-        "description": "لا تفوت فرصة التوصيل المجاني على جميع الطلبات التي تزيد قيمتها عن 15 دينار.",
+        "title": "توصيل مجاني على كل طلب يزيد عن 20 دينار",
+        "description": "لا تفوت فرصة التوصيل المجاني على جميع الطلبات التي تزيد قيمتها عن 20 دينار.",
         "buttonText": "اكتشف المزيد"
       },
       {
         "offer": "لفترة محدودة",
         "title": "احصل على التوفير مع التوصيل المجاني!",
-        "description": "اطلب الآن واستمتع بالتوصيل المجاني للطلبات التي تزيد عن 15 دينار أردني.",
+        "description": "اطلب الآن واستمتع بالتوصيل المجاني للطلبات التي تزيد عن 20 دينار أردني.",
         "buttonText": "تسوق ووفر"
       }
     ]
@@ -107,8 +107,42 @@
     "noProducts": "لا توجد منتجات متاحة لهذا البراند"
   }
   ,
+ "forgotPassword": {
+   "title": "نسيت كلمة المرور؟",
+  "subtitle": "أدخل بريدك الإلكتروني وسنرسل لك رابطًا لإعادة تعيين كلمة المرور.",
+  "email": "البريد الإلكتروني",
+  "sendLink": "إرسال رابط إعادة التعيين",
+  "sending": "جاري الإرسال...",
+  "successTitle": "تم بنجاح!",
+  "successText": "تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني.",
+  "error": "خطأ",
+  "failed": "فشل في إرسال الرابط.",
+  "emailRequired": "يرجى إدخال بريدك الإلكتروني.",
+  "ok": "حسناً",
+  "backToLogin": "العودة لتسجيل الدخول"
+  }
+  ,
+ "resetPassword": {
+   "title": "إعادة تعيين كلمة المرور",
+  "subtitle": "أدخل كلمة المرور الجديدة وأكدها لتحديث حسابك.",
+  "newPassword": "كلمة المرور الجديدة",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "updatePassword": "تحديث كلمة المرور",
+  "updating": "جاري التحديث...",
+  "successTitle": "تم بنجاح!",
+  "successText": "تم تحديث كلمة المرور بنجاح.",
+  "error": "خطأ",
+  "failed": "فشل في تحديث كلمة المرور.",
+  "invalidLink": "رابط إعادة تعيين كلمة المرور غير صالح أو منتهي الصلاحية.",
+  "passwordsDoNotMatch": "كلمتا المرور غير متطابقتين.",
+  "passwordTooShort": "يجب أن تكون كلمة المرور 8 أحرف على الأقل."
+  }
+  ,
     "FavoriteProducts": {
     "favoriteProductsTitle": "المنتجات المفضلة",
+    "errorTitle": "حدث خطأ",
+    "removeError": "فشل إزالة المنتج من المفضلة",
+    "networkError": "حدث خطأ في الشبكة",
     "loginRequired": "يجب عليك تسجيل الدخول لعرض المنتجات المفضلة.",
     "login": "تسجيل الدخول",
     "loadingFavorites": "جاري تحميل المنتجات المفضلة...",
@@ -180,6 +214,7 @@
   "checkout": {
     "checkoutFormTitle": "نموذج الطلب",
   "contactInformation": "معلومات الاتصال",
+  "homeDeliveryOnlyNoPickup": "التوصيل فقط، لا يوجد استلام محلي",
   "mobileNumber": "رقم الجوال",
   "emailAddress": "البريد الإلكتروني",
   "note": "ملاحظة",
@@ -221,7 +256,22 @@
     "key": "المفتاح",
     "value": "القيمة",
     "noSpecs": "لا توجد مواصفات متاحة."
+  },
+ "auth": {
+    "loginTitle": "أهلاً بعودتك",
+    "registerTitle": "إنشاء حساب جديد",
+    "emailLabel": "البريد الإلكتروني",
+    "passwordLabel": "كلمة المرور",
+    "fullNameLabel": "الاسم الكامل",
+    "loginBtn": "تسجيل الدخول",
+    "registerBtn": "إنشاء حساب",
+    "loginPlaceholder": "أدخل بريدك الإلكتروني",
+    "passwordPlaceholder": "أدخل كلمة المرور",
+    "fullNamePlaceholder": "أدخل الاسم الكامل",
+    "fillAllFields": "يرجى ملء جميع الحقول",
+    "registerSuccess": "تم إنشاء حسابك بنجاح. يرجى تسجيل الدخول الآن.",
+    "loginFail": "فشل تسجيل الدخول",
+    "registerFail": "فشل إنشاء الحساب"
   }
-
 
 }
