--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -323,6 +323,11 @@
     "saving": "جاري الحفظ...",
     "addAddress": "إضافة عنوان",
     "cancel": "أو إلغاء"
+  },
+"FeaturedProducts": {
+    "defaultSubtitle": "عروض خاصة",
+    "defaultButtonText": "تصفح كل المنتجات",
+    "error": "حدث خطأ ما",
+    "brandDescription": "سكينزي كير هي وجهتك الموثوقة للجمال عبر الإنترنت، نقدم لكِ عطورًا أصلية، ومنتجات عناية بالبشرة فاخرة، ومستحضرات تجميل لا غنى عنها. نؤمن بأن الجمال يجب أن يكون سهلاً، أصيلاً، وفي متناول يديكِ دائماً."
   }
-
 }
