--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -329,5 +329,12 @@
     "defaultButtonText": "تصفح كل المنتجات",
     "error": "حدث خطأ ما",
     "brandDescription": "سكينزي كير هي وجهتك الموثوقة للجمال عبر الإنترنت، نقدم لكِ عطورًا أصلية، ومنتجات عناية بالبشرة فاخرة، ومستحضرات تجميل لا غنى عنها. نؤمن بأن الجمال يجب أن يكون سهلاً، أصيلاً، وفي متناول يديكِ دائماً."
-  }
+  },
+  "AboutSection": {
+  "subtitle": "من نحن؟",
+  "title": "وجهتك الأولى للجمال الأصيل",
+  "description": "في سكنزي كير، بدأت رحلتنا بشغف بسيط: جعل منتجات الجمال الفاخرة والأصيلة في متناول الجميع. نحن نختار كل منتج بعناية، من العطور النادرة إلى أحدث مستحضرات العناية بالبشرة، لنضمن لك جودة لا مثيل لها. مهمتنا أن نجعل تجربتك الجمالية سهلة، موثوقة، وممتعة.",
+  "buttonText": "اعرف المزيد",
+  "imageAlt": "مجموعة من منتجات العناية بالبشرة الفاخرة"
+}
 }
