--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -336,5 +336,23 @@
   "description": "في سكنزي كير، بدأت رحلتنا بشغف بسيط: جعل منتجات الجمال الفاخرة والأصيلة في متناول الجميع. نحن نختار كل منتج بعناية، من العطور النادرة إلى أحدث مستحضرات العناية بالبشرة، لنضمن لك جودة لا مثيل لها. مهمتنا أن نجعل تجربتك الجمالية سهلة، موثوقة، وممتعة.",
   "buttonText": "اعرف المزيد",
   "imageAlt": "مجموعة من منتجات العناية بالبشرة الفاخرة"
-}
+},
+"services": {
+    "title": "لماذا تتسوقين من سكينزي كير؟",
+    "subtitle": "تجربة تسوق فريدة وموثوقة",
+    "items": [
+      {
+        "title": "منتجات أصلية 100%",
+        "description": "نضمن لكِ أن جميع منتجاتنا أصلية ومن الموردين المعتمدين مباشرة، لتتسوقي وأنتِ مطمئنة."
+      },
+      {
+        "title": "توصيل سريع وموثوق",
+        "description": "تصلكِ طلبياتكِ إلى باب منزلكِ في أسرع وقت وبأفضل حالة تغليف للحفاظ على منتجاتك."
+      },
+      {
+        "title": "دعم فني متخصص",
+        "description": "فريقنا جاهز لمساعدتكِ والإجابة على جميع استفساراتكِ لضمان أفضل تجربة تسوق ممكنة."
+      }
+    ]
+  }
 }
