--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -354,5 +354,18 @@
         "description": "فريقنا جاهز لمساعدتكِ والإجابة على جميع استفساراتكِ لضمان أفضل تجربة تسوق ممكنة."
       }
     ]
+  },
+  "ProductPage": {
+  "home": "الرئيسية",
+  "products": "المنتجات",
+  "ourProducts": "منتجاتنا",
+  "loading": "جارٍ تحميل المنتجات...",
+  "showing": "عرض",
+  "sort": {
+    "bestSelling": "الأكثر مبيعاً",
+    "lowToHigh": "السعر: من الأقل للأعلى",
+    "highToLow": "السعر: من الأعلى للأقل"
   }
+}
+
 }
