تحسينات بكل تشب

--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -202,6 +202,10 @@
   },
   "cart": {
      "error": "خطأ",
+     "addSuccess": "تمت الإضافة إلى السلة بنجاح!",
+     "loginSuccess": "تم تسجيل الدخول بنجاح! جاري إعادة التوجيه...",
+  "loadingCart": "جاري تحميل السلة...",
+  "emptyCart": "سلة التسوق فارغة",
   "loginRequired": "يجب تسجيل الدخول لإضافة المنتج إلى السلة",
   "addError": "حدث خطأ أثناء الإضافة إلى السلة",
   "removingProduct": "جاري حذف المنتج من السلة...",
