--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -96,9 +96,26 @@
     "goToCart": "Proceed to Cart",
     "orContinueShopping": "or continue shopping"
   },
+  "HomePage": {
+    "trendingTitle": "Trending Products",
+    "trendingSubtitle": "Discover Our Best Sellers",
+    "promoTitle": "This Week's Highlights",
+    "promoSubtitle": "Shop By Discounts",
+    "trendingTitle": "Trending Products",
+    "trendingSubtitle": "Discover Our Best Sellers",
+    "highlightsTitle": "This Week's Highlights",
+    "highlightsSubtitle": "Shop By Discounts",
+    "gridExampleTitle": "Grid Section Example",
+    "gridExampleSubtitle": "Another Grid",
+    "viewAll": "View all",
+    "gridTitle": "Grid Section Example",
+    "gridSubtitle": "Another Grid",
+    "viewAll": "View all"
+  },
 "cart": {
     "error": "Error",
     "addSuccess": "add Success",
+    "adding": "Adding to cart...",
   "loginRequired": "You must be logged in to add the product to the cart",
   "addError": "An error occurred while adding to the cart",
   "removingProduct": "Removing the product from the cart...",
@@ -191,6 +208,18 @@
     "favoriteProductsTitle": "Favorite Products",
     "loginRequired": "You must be logged in to view favorite products.",
     "login": "Log In",
+    "favoriteProductsTitle": "Favorite Products",
+    "loading": "Loading your favorites...",
+    "loginRequiredTitle": "Login Required",
+    "loginRequiredMessage": "Please log in to view your favorite products.",
+    "loginButton": "Log In",
+    "noFavoritesTitle": "No Favorites Yet",
+    "noFavoritesMessage": "Add products you love to your favorites to see them here.",
+    "continueShopping": "Continue Shopping",
+    "errorTitle": "An Error Occurred",
+    "removeError": "Failed to remove favorite",
+    "removeSuccess": "Removed from favorites",
+    "networkError": "Network error occurred",
     "loadingFavorites": "Loading favorite products...",
     "noFavorites": "No products in your favorites list.",
     "browseProducts": "Browse Products",
@@ -399,8 +428,18 @@
     "home": "Home",
     "products": "Products",
     "ourProducts": "Our Products",
+    "viewAll": "View All",
     "loading": "Loading products...",
+      "gridExampleTitle": "Grid Section Example",
+    "gridExampleSubtitle": "Another Grid",
     "showing": "Showing",
+    "pagination": {
+      "previous": "Previous",
+      "next": "Next",
+      "page": "Page",
+      "of": "of"
+    },
+    "noProducts": "No products available in this category.",
     "sort": {
       "bestSelling": "Best selling",
       "lowToHigh": "Price: Low to High",
